--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="806884">  <td>24/01/04 15:36:14</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Standalone.setup()[pri:0, instance:standalone.Standalone@7f010382]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@835227336</td>   <td></td> </tr>
-<tr bgcolor="806884">  <td>24/01/04 15:36:17</td>   <td>3655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Standalone.test()[pri:0, instance:standalone.Standalone@7f010382]">test</td> 
-  <td>main@835227336</td>   <td></td> </tr>
-<tr bgcolor="806884">  <td>24/01/04 15:36:27</td>   <td>12939</td> <td>&nbsp;</td><td title="&lt;&lt;Standalone.teardown()[pri:0, instance:standalone.Standalone@7f010382]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@835227336</td>   <td></td> </tr>
+<tr bgcolor="806884">  <td>24/01/04 17:20:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.launchDriver()[pri:0, instance:tests.Test1@5ccddd20]">&gt;&gt;launchDriver</td> 
+<td>&nbsp;</td>  <td>main@1031061344</td>   <td></td> </tr>
+<tr bgcolor="806884">  <td>24/01/04 17:20:04</td>   <td>-25</td> <td title="&gt;&gt;BaseClass.loadPropertyFile()[pri:0, instance:tests.Test1@5ccddd20]">&gt;&gt;loadPropertyFile</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1031061344</td>   <td></td> </tr>
+<tr bgcolor="9ad2e3">  <td>24/01/04 17:20:08</td>   <td>3817</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Test1.getAuthorDetails()[pri:0, instance:tests.Test1@5ccddd20]">getAuthorDetails</td> 
+  <td>main@1031061344</td>   <td></td> </tr>
+<tr bgcolor="806884">  <td>24/01/04 17:20:11</td>   <td>6209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:tests.Test1@5ccddd20]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td>  <td>main@1031061344</td>   <td></td> </tr>
 </table>
